--- a/src/styles/components/common.sass
+++ b/src/styles/components/common.sass
@@ -35,6 +35,9 @@ body
 	+xs
 		margin-bottom: 15px
 		font-size: 32px
+	&_lg
+		font-size: 45px
+		line-height: 50px
 	&_md
 		font-size: 40px
 		line-height: 45px
