--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -46,6 +46,12 @@
   fill: #222;
   stroke: initial;
 }
+.icon-search {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
 .icon-triangle-r {
   width: 1em;
   height: 1em;
