--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -130,8 +130,13 @@ html(lang='ru')
           'Home landing',
           ''
         ], [
-          'modals.html',
+          'club-choice.html',
           '03',
+          'Club choice page',
+          ''
+        ], [
+          'modals.html',
+          '04',
           'Modals page',
           ''
         ]
