--- a/src/template/components/benefits.pug
+++ b/src/template/components/benefits.pug
@@ -3,7 +3,7 @@ if benefits ? benefits : benefits = []
 //begin benefits
 +b.SECTION.benefits.section(data-anchor='pageThree' class= benefits.classMod ? benefits.classMod : '')
 	+e.container.container
-		+e.H2.title.title._black(data-anim-title='') Бэби-клуб &#8212 это
+		+e.H2.title.title._black Бэби-клуб &#8212 это
 		-
 			lettersList = [{
 			picMod: 'icon-letter-f',
