--- a/src/styles/components/contact.sass
+++ b/src/styles/components/contact.sass
@@ -11,10 +11,6 @@
 				padding: 100px 15px 200px
 			+sm
 				padding: 0 15px 60px
-			//+sm
-			//	padding: 30px 15px 260px
-			//+xs
-			//	padding: 30px 15px
 	&__title
 		font-size: 45px
 		color: #000
@@ -235,6 +231,7 @@
 		+md
 			margin-top: 15px
 		+sm
+			margin-top: 25px
 			justify-content: center
 	&__map
 		display: inline-block
