--- a/src/styles/components/c-tabs.sass
+++ b/src/styles/components/c-tabs.sass
@@ -301,3 +301,26 @@
 			line-height: 45px
 			padding: 0 15px
 			border: 3px solid transparent
+			&_1
+				background-color: #2a7439
+			&_2
+				background-color: #aaabab
+			&_3
+				background-color: #f36f21
+			&_4
+				background-color: #808869
+			&_5
+				background-color: #dc6627
+		&_garden
+			min-height: 350px
+			text-align: center
+			.c-tabs__item-icon-wrap
+				justify-content: center
+			.c-tabs__item-descr
+				min-height: 0
+			.icon-letter-o
+				transform: scale(.75)
+			.icon-letter-t
+				transform: scale(.7)
+			.icon-rob
+				transform: scale(.85)
