--- a/src/styles/components/interior.sass
+++ b/src/styles/components/interior.sass
@@ -1,6 +1,8 @@
 .interior
 	position: relative
 	background: #207bd2
+	&_red
+		background: #e43d45
 	+xs
 		padding: 0
 	&__title
@@ -14,7 +16,6 @@
 			top: 17%
 			margin-bottom: 0
 	&__slider
-		//height: calc(100vh - 90px)
 		&-item
 			position: relative
 			height: calc(100vh - 70px)
