--- a/src/styles/partials/letters-spr.sass
+++ b/src/styles/partials/letters-spr.sass
@@ -3,11 +3,45 @@
 .icon-letter-l, .icon-letter-m, .icon-letter-b, .icon-letter-n, .icon-letter-i,
 .icon-letter-bottle, .icon-letter-bottle-m, .icon-letter-r, .icon-letter-e, .icon-letter-2,
 .icon-letter-7, .icon-letter-1, .icon-letter-8, .icon-letter-z, .icon-letter-6,
-.icon-letter-5, .icon-letter-3, .icon-letter-4
+.icon-letter-5, .icon-letter-3, .icon-letter-4, .icon-yakor, .icon-yelka, .icon-i, .icon-moroz, .icon-rob, .icon-zamok, .icon-ulitka
 	display: inline-block
 	vertical-align: middle
 	background: url("../img/icons/letters-spr.png") no-repeat
 
+.icon-ulitka
+	width: 70px
+	height: 91px
+	background: url("../img/icons/icon-ulitka.png") no-repeat
+
+.icon-zamok
+	width: 68px
+	height: 104px
+	background: url("../img/icons/icon-zamok.png") no-repeat
+
+.icon-rob
+	width: 80px
+	height: 103px
+	background: url("../img/icons/icon-rob.png") no-repeat
+	
+.icon-moroz
+	width: 85px
+	height: 112px
+	background: url("../img/icons/icon-moroz.png") no-repeat
+	
+.icon-i
+	width: 109px
+	height: 124px
+	background: url("../img/icons/icon-i.png") no-repeat
+.icon-yakor
+	width: 81px
+	height: 104px
+	background: url("../img/icons/icon-yakor.png") no-repeat
+	
+.icon-yelka
+	width: 89px
+	height: 109px
+	background: url("../img/icons/icon-yelka.png") no-repeat
+	
 .icon-letter-k
 	background-position: -5px -0px
 	width: 133px
