--- a/src/template/pages/home.pug
+++ b/src/template/pages/home.pug
@@ -15,6 +15,32 @@ block main
 
 	include ../components/info
 
+	-
+		lettersList = [{
+		picMod: 'icon-letter-f',
+		text: 'Сеть центров с 17-летним опытом развития детей'
+		}, {
+		picMod: 'icon-letter-k',
+		text: 'Занятия для дошкольников: от 8 месяцев до 7 лет'
+		}, {
+		picMod: 'icon-letter-b',
+		text: 'Маленькие группы - до 8 детей'
+		}, {
+		picMod: 'icon-letter-n',
+		text: 'Безопасное игровое пространство'
+		}, {
+		picMod: 'icon-letter-d',
+		text: 'Место, где ребёнка понимают и любят таким, какой он есть'
+		}, {
+		picMod: 'icon-letter-v',
+		text: 'Только здоровье сберегающие методики'
+		}, {
+		picMod: 'icon-letter-l',
+		text: 'Всестороннее развитие интеллектуальных, творческих и физических способностей детей'
+		}, {
+		picMod: 'icon-letter-t',
+		text: 'Подготовка детей к саду, школе и взрослой жизни'
+		}]
 	include ../components/benefits
 
 	include ../components/learn
