--- a/src/styles/components/screen.sass
+++ b/src/styles/components/screen.sass
@@ -74,7 +74,7 @@
 			padding: 0 15px
 			margin: 0 10px
 			+xs
-				margin-bottom: 10px
+				margin: 0 0 10px
 	&__video
 		position: absolute
 		top: 120px
