--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -122,22 +122,27 @@ html(lang='ru')
         [
           'home.html',
           '01',
-          'Home',
+          'Главная',
           ''
         ], [
           'landing.html',
           '02',
-          'Home landing',
+          'Лендинг',
           ''
         ], [
           'club-choice.html',
           '03',
-          'Club choice page',
+          'Выбор клуба',
           ''
         ], [
           'modals.html',
           '04',
-          'Modals page',
+          'Поп-апы',
+          ''
+        ], [
+          'baby-garden.html',
+          '05',
+          'Садик',
           ''
         ]
       ];
