--- a/src/styles/components/expert.sass
+++ b/src/styles/components/expert.sass
@@ -1,6 +1,5 @@
 .expert
 	background: #703782
-	&__container
 	&__title
 		max-width: 1000px
 		margin: 0 auto 35px
@@ -44,6 +43,8 @@
 			&_next
 				right: -15%
 				+r(1365)
+					right: -11.5%
+				+r(1279)
 					right: 0
 					bottom: 0
 					top: auto
