--- a/src/styles/components/spec.sass
+++ b/src/styles/components/spec.sass
@@ -198,6 +198,7 @@
     &-img
       margin-bottom: 7px
     &-title
+      margin-bottom: 8px
       text-align: center
       +f('geo-900', 25)
     p
