--- a/src/template/components/library.pug
+++ b/src/template/components/library.pug
@@ -1,5 +1,5 @@
 if library ? library : library = []
-if library.title ? library.title : library.title = 'Бэби-библиотека'
+if library.title ? library.title : library.title = 'Бэбибиблиотека'
 
 //begin library
 +b.SECTION.library.section(class= library.classMod ? library.classMod : '' data-anim-slow='')
