--- a/src/styles/components/blocks.sass
+++ b/src/styles/components/blocks.sass
@@ -616,19 +616,17 @@
       height: 80px
       animation: eyeBlink1 infinite 3s steps(1, end)
   &_left
-    left: -15%
+    left: 0
     +sm
       top: -7%
-      left: 1.5%
     .eye-blink__item
       &::after
         transform: rotate(-18deg)
         top: 30px
   &_right
-    right: -5%
+    right: 90px
     +sm
       top: -7%
-      right: 13%
     .eye-blink__item
       &::before
         transform: scaleX(-1) rotate(-10deg)
