--- a/src/template/components/contact.pug
+++ b/src/template/components/contact.pug
@@ -11,7 +11,7 @@ if contact ? contact : contact = []
 					+e.SPAN.city-current г. Москва
 					+e.A.city-change.underlined(href='#!' data-popup-target='change-city') Другой город
 				+e.metro
-					+e.P.metro-text Удобная для Вас ветка Метро:
+					+e.P.metro-text Удобная для Вас ветка метро:
 					+e.UL.metro-list.js-branch-list
 						-metroItem = 1
 						while metroItem < 15
