--- a/src/template/pages/baby-garden.pug
+++ b/src/template/pages/baby-garden.pug
@@ -183,6 +183,7 @@ block main
 				+e.img
 					+e.IMG(src='static/img/content/nutrition_img.jpg' alt='image')
 
+	-news = {title: 'новости сада'}
 	include ../components/news
 
 	include ../components/schedule
